# flask-vue-study

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  config.py
backend/src/blueprints/: auth.py  photos.py
backend/src/helpers/: exceptions.py  response.py
backend/src/services/: aws.py  database.py  photos.py  session.py  user.py
frontend/: .lintstagedrc  Dockerfile  env.d.ts  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css
frontend/src/components/: Header.vue  HeaderButton.vue  HelloWorld.vue  Image.vue
frontend/src/router/: index.ts
frontend/src/services/: auth-header.ts  auth.service.ts  user.service.ts
frontend/src/store/: auth.module.ts
frontend/src/views/: HomeView.vue  LoginRegisterView.vue  LoginView.vue  PendingView.vue  RegisterView.vue  SubmitPostView.vue
